fix: core module; sass; routing

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,25 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
-  <h1>
-    Welcome to {{ title }}!
-  </h1>
-</div>
-<h2>Here are some links to help you start: </h2>
+<header>
+  <app-header></app-header>
+</header>
 
-<app-header-toolbar></app-header-toolbar>
+<aside>
+  .sidebar
+</aside>
+
+<main>
+  <article>
+    <span>1</span>
+  </article>
+  <article>
+    <span>2</span>
+  </article>
+  <article>
+    <span>11</span>
+  </article>
+</main>
 
 <router-outlet></router-outlet>
+
+<footer>
+  Copyright 2018
+</footer>
