fix: layout; styles; routing; baseUrl

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,24 +2,8 @@
   <app-header></app-header>
 </header>
 
-<aside>
-  .sidebar
-</aside>
-
 <main>
-  <article>
-    <span>1</span>
-  </article>
-  <article>
-    <span>2</span>
-  </article>
-  <article>
-    <span>11</span>
-  </article>
+  <router-outlet></router-outlet>
 </main>
 
-<router-outlet></router-outlet>
-
-<footer>
-  Copyright 2018
-</footer>
+<footer>footer</footer>
