--- a/src/app/features/feature-b/feature-b.component.html
+++ b/src/app/features/feature-b/feature-b.component.html
@@ -1,3 +1,9 @@
-<p>
-  feature-b works!
-</p>
+<section class='ribbon'>
+  <app-ribbon></app-ribbon>
+</section>
+
+<section class="content">
+  <article>content Feature B</article>
+  <nav>nav</nav>
+  <aside>aside</aside>
+</section>
