--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,37 +1,18 @@
-
-header {
-  text-transform: uppercase;
-  padding-top: 1px;
-  padding-bottom: 1px;
-  color: black;
-  border-style: solid;
-  border-width: 1px;
-}
-
-aside {
-  color: black;
-  border-width: 1px;
-  border-style: solid;
-  float: left;
-  width: 6.3rem;
-}
-
-footer {
-  color: black;
-  border-width: 1px;
-  border-style: solid;
-  clear: both;
-}
-
 main {
-  float: right;
-  width: calc(100% - 7.2rem);
-  padding: 5px;
-  background: hsl(240, 100%, 50%);
+  min-height: 800px;
+  margin: 0px;
+  padding: 0px;
+  display: -webkit-flex;
+  display:         flex;
+  -webkit-flex-flow: row;
+          flex-flow: row;
+}
 
-  article {
-    background: hsl(240, 100%, 50%);
-    color: hsl(240, 0%, 100%);
-    border-width: 5px;
-  }  
+header, footer {
+  display: block;
+  margin: 4px;
+  padding: 5px;
+  min-height: 100px;
+  border: 1px solid #eebb55;
+  background: #ffeebb;
 }
