--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -1,4 +1,4 @@
-<h2>Header component</h2>
+<p>Header component</p>
 <nav>
   <a routerLink="/featureA" routerLinkActive="active">FeatureA</a>
   <a routerLink="/featureB" routerLinkActive="active">FeatureB</a>
