--- a/src/app/features/feature-a/feature-a.component.html
+++ b/src/app/features/feature-a/feature-a.component.html
@@ -1,3 +1,3 @@
-<p>
-  feature-a works!
-</p>
+<article class="content">content Feature A</article>
+<aside class="aside-primary-panel">Primary Panel</aside>
+<aside class="aside-secondary-panel">Secondary Panel</aside>
