--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,10 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
 body {
-  background: white;
-  margin: 0rem;
-  padding: 0px;
-  font-family: -apple-system, BlinkMacSystemFont,
-            "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell",
-            "Fira Sans", "Droid Sans", "Helvetica Neue",
-            sans-serif;
+  font: 24px Helvetica;
+  background: #999999;
 }
