--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -1,4 +1,4 @@
-<p>Header component</p>
+<p>{{'header.title' | translate}}</p>
 <nav>
   <a routerLink="/featureA" routerLinkActive="active">FeatureA</a>
   <a routerLink="/featureB" routerLinkActive="active">FeatureB</a>
