--- a/src/app/features/feature-a/feature-a.component.html
+++ b/src/app/features/feature-a/feature-a.component.html
@@ -1,3 +1,3 @@
-<article class="content">content Feature A</article>
+<article class="content">{{'featureA.content' | translate}}</article>
 <aside class="aside-primary-panel">Primary Panel</aside>
 <aside class="aside-secondary-panel">Secondary Panel</aside>
